--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+* {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: #22254b;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+    background-color: #373b69;
+    display: flex;
+    justify-content: flex-end;
+    padding: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.search {
+    background-color: transparent;
+    border: 2px solid #22254b;
+    border-radius: 50px;
+    color: #fff;
+    font-family: inherit;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.search::placeholder {
+    color: #7378c5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search:focus {
+    background-color: #22254b;
+    outline: none;
+}
+
+.movie {
+    margin: 1rem;
+    width: 300px;
+    border-radius: 3px;
+    background-color: #373b69;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+}
+
+.movie-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.movie img {
+    max-width: 100%;
+    height: 450px;
+    object-fit: cover;
+}
+
+.movie-info {
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.movie-info h3 {
+    margin: 0;
+}
+
+.movie-over {
+    background-color: #fff;
+    color: #22254b;
+    padding: 2rem;
+    position: absolute;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    box-shadow: 0 -3px 5px rgba(0, 0, 0, 0.1);
+    left: 0;
+    bottom: 0;
+    overflow: auto;
+    max-height: 100%;
+    scrollbar-width: none !important;
+    right: 0;
+    transform: translateY(101%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.movie-over::-webkit-scrollbar {
+    width: 2px;
+}
+
+.movie:hover .movie-over {
+    transform: translateY(0);
+}
+
+.tag {
+    background-color: #22254b;
+    border-radius: 5px;
+    padding: 0.5rem;
+    font-weight: bold;
+}
+
+.tag.green {
+    color: green;
+}
+
+.tag.orange {
+    color: orange;
+}
+
+.tag.red {
+    color: red;
 }
