--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,24 @@ body {
     color: white;
 }
 
+body::-webkit-scrollbar {
+    width: 15px;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: red;
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #b30000;
+}
+
 header {
     background-color: #373b69;
     display: flex;
